Fix tooltip alignment

--- a/frontend/src/components/related-content/style.scss
+++ b/frontend/src/components/related-content/style.scss
@@ -1,4 +1,7 @@
 @import "../../vars.scss";
+.ant-avatar-group-popover {
+  zoom: 75%;
+}
 
 .related-content-wrapper {
   overflow: hidden;
